# c-logger

./: CMakeLists.txt  library.h
include/: logger.h
src/: example.c  logger.c
